[gd_scene load_steps=5 format=3 uid="uid://lpuyvufmuwmy"]

[ext_resource type="Script" uid="uid://3cfo5ypmxr8s" path="res://objects/buffer/test_buffer/test_buffer.gd" id="1_1gtb8"]
[ext_resource type="PackedScene" uid="uid://n6os6n6vg5kf" path="res://objects/buffer/buffer.tscn" id="2_tttqo"]
[ext_resource type="PackedScene" uid="uid://bcjsl7506bdq3" path="res://objects/slice/slice.tscn" id="3_tttqo"]
[ext_resource type="PackedScene" uid="uid://ca12t12f54kde" path="res://objects/flavor_dropdown.tscn" id="4_1nwmy"]

[node name="TestBuffer" type="Node2D"]
script = ExtResource("1_1gtb8")

[node name="Buffer" parent="." instance=ExtResource("2_tttqo")]
offset_left = 57.0
offset_top = 117.0
offset_right = 57.0
offset_bottom = 117.0

[node name="LineEdit" type="LineEdit" parent="."]
offset_left = 111.0
offset_top = 27.0
offset_right = 179.563
offset_bottom = 58.0

[node name="Label" type="Label" parent="LineEdit"]
layout_mode = 0
offset_left = -54.25
offset_top = -0.25
offset_right = -14.25
offset_bottom = 22.75
text = "Size:"

[node name="PopLabel" type="Label" parent="."]
offset_left = 57.0
offset_top = 248.0
offset_right = 128.0
offset_bottom = 271.0
text = "Last Pop:"

[node name="Slice" parent="PopLabel" instance=ExtResource("3_tttqo")]
offset_left = 76.4
offset_top = -7.09999
offset_right = 117.4
offset_bottom = 33.9
flavor = 0
slice_type = 1

[node name="OverflowLabel" type="Label" parent="."]
offset_left = 247.0
offset_top = 248.0
offset_right = 359.0
offset_bottom = 271.0
text = "Last Overflow:"

[node name="Slice" parent="OverflowLabel" instance=ExtResource("3_tttqo")]
offset_left = 117.0
offset_top = -7.0
offset_right = 158.0
offset_bottom = 34.0
flavor = 0
slice_type = 1

[node name="PopButton" type="Button" parent="."]
offset_left = 57.0
offset_top = 371.0
offset_right = 95.0
offset_bottom = 402.0
text = "Pop"

[node name="AddButtonControl" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 182.0
offset_top = 371.0
offset_right = 485.0
offset_bottom = 427.0

[node name="FlavorDropdown" parent="AddButtonControl" instance=ExtResource("4_1nwmy")]
layout_mode = 1
offset_top = 6.0
offset_bottom = 6.0

[node name="AddButton" type="Button" parent="AddButtonControl"]
layout_mode = 0
offset_left = 246.0
offset_top = 6.0
offset_right = 285.0
offset_bottom = 37.0
text = "Add"

[connection signal="slice_buffer_overflow" from="Buffer" to="." method="_on_buffer_slice_buffer_overflow"]
[connection signal="text_submitted" from="LineEdit" to="." method="_on_line_edit_text_submitted"]
[connection signal="pressed" from="PopButton" to="." method="_on_pop_button_pressed"]
[connection signal="flavor_selected" from="AddButtonControl/FlavorDropdown" to="." method="_on_flavor_dropdown_flavor_selected"]
[connection signal="pressed" from="AddButtonControl/AddButton" to="." method="_on_add_button_pressed"]
